# sparsilex

./: .gitignore  PRD.md  VISION.md  package.json
.claude/: launch.json
api/: main.py  pyproject.toml  requirements.txt
api/agent/: agent.py  memory.py  system_prompt.py
api/agent/tools/: __init__.py  check_assumptions.py  check_normality.py  clean_data.py  code_tools.py  create_plot.py  detect_outliers.py  inspect_data.py  interpret.py  run_test.py  suggest_next.py
api/core/: config.py
api/routers/: agent.py  analysis.py  data.py  files.py  project.py  report.py  session.py  share.py
api/sample_data/: experiment.csv  generate.py
api/services/: apa_format.py  code_export.py  code_files.py  data_service.py  diagnostic_plots.py  plotly_plots.py  r_compute.py  r_session.py  report_export.py  stats_service.py
desktop/: README.md
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
docs/: PRD-agentic-ide.md  PRD-rstudio-addin.md  PRD-sparsilex-2.0.md
web/: package.json  pnpm-lock.yaml
web/src/app/: globals.css  layout.tsx
web/src/app/analyze/: page.tsx
web/src/components/agent/: agent-panel.tsx  agent-step.tsx
web/src/components/analysis/: analysis-options.tsx  variable-select.tsx
web/src/components/code/: code-editor.tsx  code-workspace.tsx  file-tree.tsx  (+2 more)
web/src/hooks/: use-agent.ts  use-analysis.ts  use-code-session.ts  use-companion.ts  use-dataset.ts  use-keyboard-shortcuts.ts  use-project-files.ts  use-voice.ts
web/src/lib/: analyses.ts  analysis-help.ts  api.ts  companion-targets.ts  sample-data.ts  types.ts
(+16 files in other folders)
