[project]
name = "sparsilex-api"
version = "0.1.0"
description = "SparsileX API — AI-native statistical analysis platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pandas>=2.2.0",
    "scipy>=1.14.0",
    "anthropic>=0.52.0",
    "python-multipart>=0.0.18",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.0",
    "sse-starlette>=2.2.0",
]
