[package]
name = "sparsilex-desktop"
version = "0.1.0"
description = "SparsileX Desktop — AI-Native Statistical Analysis"
authors = []
license = "AGPL-3.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6", features = ["dialog-all", "fs-all", "shell-open-api"] }
